--- a/pkg/ocli/testdata/cli.ocs.yaml
+++ b/pkg/ocli/testdata/cli.ocs.yaml
@@ -1,8 +1,8 @@
-opencliVersion: 1.0.0-alpha.0
+opencliVersion: "1.0.0-alpha.0"
 
 info:
-  title: OpenCLI
-  summary: A CLI for working with OpenCLI Specs
+  title: "OpenCLI"
+  summary: "A CLI for working with OpenCLI Specs"
   description: |
     `ocli` is a command line interface designed to make working with OpenCLI
     Spec documents easier. It provides a number of capabilities, including:
@@ -18,8 +18,8 @@ info:
     ```sh
     ocli generate --help
     ```
-  version: 1.0.0-alpha.0
-  binary: ocli
+  version: "1.0.0-alpha.0"
+  binary: "ocli"
   license:
     name: "MIT"
     spdxId: "MIT"
@@ -31,32 +31,35 @@ info:
 
 
 install:
-  - name: Binary Download
-    url: https://github.com/bcdxn/opencli/releases
+  - name: "Binary Download"
+    url: "https://github.com/bcdxn/opencli/releases"
     description: |
       You can visit the GitHub releases page of the project to download pre-compiled binaries
       appropriate for your system.
-  - name: Go Get
-    command: 'go get github.com/bcdxn/opencli'
+  - name: "Go Get"
+    command: "go get github.com/bcdxn/opencli"
       
 commands:
-  ocli spec {command} <arguments> [flags]:
-    summary: Commands related to the OpenCLI Specification
+  ocli specification {command} <arguments> [flags]:
+    aliases:
+      - "spec"
+      - "sp"
+    summary: "Commands related to the OpenCLI Specification"
     group: true
-  ocli spec versions:
-    summary: Print the versions of the OpenCLI Specificatons that are supported
+  ocli specification versions:
+    summary: "Print the versions of the OpenCLI Specificatons that are supported"
     description: |
       The `versions` command will print the versions of the OpenCLI
       Specification that are available and supported by this version of the
       OpenCLI CLI.
 
-  ocli spec check <path-to-spec>:
-    summary: Check an OpenCLI Spec document for errors
+  ocli specification check <path-to-spec>:
+    summary: "Check an OpenCLI Spec document for errors"
     description: |
       The `check` command will validate an OpenCLI Spec document and return any
       errors that are found.
     arguments:
-      - name: path-to-spec
+      - name: "path-to-spec"
         summary: The path to the OpenCLI Spec document to check
         description: |
           this command will check the validity of the given OpenCLI document
@@ -64,54 +67,64 @@ commands:
 
           NOTE: The  format of the input file will be determined by the file extension.
         required: true
-        type: string
+        type: "string"
   
   ocli generate {command} <arguments> [flags]:
-    summary: A collection of commands used to generate code and/or documentation from an OpenCLI Spec document
+    summary: "Commands used to generate code and/or documentation from an OpenCLI Spec document"
     group: true
   ocli generate docs <path-to-spec> [flags]:
-    summary: Generate documentation from an OpenCLI Spec document
+    summary: "Generate documentation from an OpenCLI Spec document"
     description: |
       The `generate docs` command will generate documentation from an OpenCLI
       Spec document. You can specify the format of the documentation to be
       generated using the `--format` flag.
     arguments:
-      - name: path-to-spec
-        summary: The path to the OpenCLI Spec that documentation will be generated from
+      - name: "path-to-spec"
+        summary: "The path to the OpenCLI Spec that documentation will be generated from"
         required: true
-        type: string
+        type: "string"
     flags:
-      - name: format
-        summary: The format of the documentation to generate
+      - name: "format"
+        aliases:
+          - "f"
+        summary: "The format of the documentation to generate"
+        type: "string"
         required: true
         choices:
-          - value: markdown
-          - value: html
-          - value: man
+          - value: "markdown"
+            description: "Plain text using standard [Markdown](https://commonmark.org)."
+          - value: "html"
+            description: "A full static bundle that can be rendered in the browser."
+          - value: "man"
+            description: "Plain text using [Man Page](https://en.wikipedia.org/wiki/Man_page) formatting"
+        hint: "markdown"
   ocli generate cli <path-to-spec> [flags]:
-    summary: Generate CLI Boilerplate code from an OpenCLI Spec document
+    summary: "Generate CLI Boilerplate code from an OpenCLI Spec document"
     description: |
       The `generate cli` command will generate the boilerplate code for
       various CLI frameworks from an OpenCLI Spec document. You can specify the
       language of the CLI to be generated using
       the `--language` flag.
     arguments:
-      - name: path-to-spec
+      - name: "path-to-spec"
         summary: The path to the OpenCLI Spec that the CLI will be generated from
         required: true
-        type: string
+        type: "string"
     flags:
-      - name: framework
-        summary: The language of the CLI to generate
+      - name: "framework"
+        aliases:
+          - "f"
+        summary: "The framework of the CLI boilerplate to generate"
         required: true
+        type: "string"
         choices:
-          - value: cobra
+          - value: "cobra"
             description: "[Cobra](https://github.com/spf13/cobra?tab=readme-ov-file) is a popular CLI framework for Go"
-          - value: urfave/cli
+          - value: "urfave/cli"
             description: "[urfave/cli](https://github.com/urfave/cli) is a declarative CLI framework for Go"
-          - value: yargs
+          - value: "yargs"
             description: "[yargs](https://yargs.js.org) is a popular CLI framework for Node.js"
-          - value: oclif
+          - value: "oclif"
             description: "[oclif](https://oclif.io) is a popular CLI framework written in Typescript"
 
 
