fix: docs markdown

--- a/internal/cli/cli.ocs.yaml
+++ b/internal/cli/cli.ocs.yaml
@@ -5,7 +5,7 @@ info:
   summary: "A CLI for working with OpenCLI Specs"
   description: |
     `ocli` is a command line interface designed to make working with [OpenCLI
-    Spec documents easier](https://github.com/bcdxn/opencli/tree/main). It provides a number of capabilities, including:
+    Spec documents](https://github.com/bcdxn/opencli/tree/main) easier. It provides a number of capabilities, including:
 
     - validating OpenCLI Spec documents
     - generating Documentation from OpenCLI Spec documents
