--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -17,7 +17,7 @@ before:
 
 builds:
   - id: "ocli"
-    main: "cmd/cli/main.go"
+    main: "main.go"
     binary: "ocli"
     env:
       - CGO_ENABLED=0
