--- a/internal/cli/cli.ocs.yaml
+++ b/internal/cli/cli.ocs.yaml
@@ -83,7 +83,7 @@ commands:
         type: "string"
   
   ocli generate {command} <arguments> [flags]:
-    summary: "Commands used to generate code and/or documentation from an OpenCLI Spec document"
+    summary: "Commands used code/docs generation from an OpenCLI Spec document"
     aliases:
       - "gen"
     group: true
@@ -112,10 +112,11 @@ commands:
         choices:
           - value: "markdown"
             description: "Plain text using standard [Markdown](https://commonmark.org)."
-          - value: "html"
-            description: "A full static bundle that can be rendered in the browser."
-          - value: "man"
-            description: "Plain text using [Man Page](https://en.wikipedia.org/wiki/Man_page) formatting"
+          # coming soon
+          # - value: "html"
+          #   description: "A full static bundle that can be rendered in the browser."
+          # - value: "man"
+          #   description: "Plain text using [Man Page](https://en.wikipedia.org/wiki/Man_page) formatting"
         default: "markdown"
         alternativeSources:
           - type: "env"
@@ -164,14 +165,15 @@ commands:
         required: true
         type: "string"
         choices:
-          - value: "cobra"
-            description: "[Cobra](https://github.com/spf13/cobra?tab=readme-ov-file) is a popular CLI framework for Go"
           - value: "urfavecli"
             description: "[urfave/cli](https://github.com/urfave/cli) is a declarative CLI framework for Go"
-          - value: "yargs"
-            description: "[yargs](https://yargs.js.org) is a popular CLI framework for Node.js"
-          - value: "oclif"
-            description: "[oclif](https://oclif.io) is a popular CLI framework written in Typescript"
+          # coming soon...
+          # - value: "cobra"
+          #   description: "[Cobra](https://github.com/spf13/cobra?tab=readme-ov-file) is a popular CLI framework for Go"
+          # - value: "yargs"
+          #   description: "[yargs](https://yargs.js.org) is a popular CLI framework for Node.js"
+          # - value: "oclif"
+          #   description: "[oclif](https://oclif.io) is a popular CLI framework written in Typescript"
         alternativeSources:
           - type: "env"
             name: "OCLI_CLI_FRAMEWORK"
